--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,8 @@
 
+
+
+<div *ngIf="logged">
+
 <app-header></app-header>
 
 <md-sidenav-layout  >
@@ -22,4 +26,5 @@
 </div>
    </md-sidenav-layout>
 
-   
+</div>
+<router-outlet></router-outlet>
