--- a/app/header/header.component.html
+++ b/app/header/header.component.html
@@ -13,7 +13,7 @@
   <button md-icon-button class="app-buttonSearch">
     <md-icon class="md-24">search</md-icon>
   </button>
-  <button md-icon-button class="app-close" md-tooltip="Logout sesion">
+  <button md-icon-button class="app-close"  (click)="logout()" md-tooltip="Logout sesion">
     <md-icon class="md-24">input</md-icon>
   </button>
 
