--- a/app/sidebar/sidebar.component.html
+++ b/app/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
 
                       
               <md-list>
-                       <a md-list-item [routerLink]="['/dashboard']" routerLinkActive="active"
+                       <a md-list-item [routerLink]="['dashboard']" routerLinkActive="active"
                         class="app-list-item">
                        <md-icon class="app-icon-list">dashboard</md-icon>Dashboard</a>
                      
@@ -48,13 +48,7 @@
                       class="app-list-item">
                     <md-icon class="app-icon-list">settings</md-icon>Settings</a>
 
-           
-
-      
-
-                     
-                            
-                    </md-list>
+            </md-list>
 
 
  
