--- a/app/components/home/home.component.html
+++ b/app/components/home/home.component.html
@@ -1,5 +1,8 @@
-<h2>Page: {{name}}</h2>
 
-<pre>Response from server: /users</pre>
-<pre>{{ users?.name }}</pre>
-<pre>{{ users?.last }}</pre>
+      
+<router-outlet> </router-outlet>
+
+
+
+
+
