--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -1,12 +1,11 @@
 
-<div class="app-dashboard">
- 
-     
 
+
+<div class="app-dashboard">
       <div class="top-cards">
-                                                    <div class="col-sm-3" >
+            <div class="col-sm-3" >
                                                                         
-                                                                                    <md-card class="dash-mdcard">
+                                                                                    <md-card class="dash-mdcard" [routerLink]="['/usertable']" type="button"  >
                                                                                     
                                                                                     <md-card-title >Destiny's Users</md-card-title>   
                                                                                     
@@ -23,8 +22,8 @@
 
     
                                                   <div class="col-sm-3">
-                                                                            <md-card class="dash-mdcard">
-                                                                              <md-card-title style="width:100%; ">Destiny's Users</md-card-title>   
+                                                                            <md-card class="dash-mdcard" [routerLink]="['/totalrides']" >
+                                                                              <md-card-title> Destiny's completed</md-card-title>   
                                                                               <md-card-content style="width:100%;">
                                                                           
                                                                                             <p class="users_no">{{parsedata.length}}</p>
@@ -34,8 +33,8 @@
 
 
                                            <div class="col-sm-3" >
-                                                                        <md-card class="dash-mdcard">
-                                                                        <md-card-title style="width:100%; ">Destiny's Users</md-card-title>   
+                                                                        <md-card class="dash-mdcard"  [routerLink]="['/cash']" >
+                                                                        <md-card-title style="width:100%; ">Destiny's wallet</md-card-title>   
                                                                         <md-card-content style="width:100%;">
                                                                     
                                                                                       <p class="users_no">{{parsedata.length}}</p>
@@ -46,11 +45,11 @@
 
                         
                                                 <div class="col-sm-3">
-                                                          <md-card class="dash-mdcard">
-                                                            <md-card-title style="width:100%; ">Destiny's Users</md-card-title>   
+                                                          <md-card class="dash-mdcard"  [routerLink]="['/driverlist']">
+                                                            <md-card-title style="width:100%; ">Destiny's Drivers</md-card-title>   
                                                             <md-card-content style="width:100%;">
                                                         
-                                                                          <p class="users_no">{{parsedata.length}}</p>
+                                                                          <p class="users_no">{{driverlist.length}}</p>
                                                             </md-card-content> </md-card>
                                             </div>
 
@@ -59,9 +58,9 @@
 
                                                   <div class="col-sm-6" >
                                                                         
-                                                                                    <md-card class="dash-mdcard">
+                                                                                    <md-card class="dash-mdcard" [routerLink]="['/drive_requests']">
                                                                                     
-                                                                                    <md-card-title >Destiny's Users</md-card-title>   
+                                                                                    <md-card-title >Drive requests</md-card-title>   
                                                                                     
                                                                                     <md-card-content >
                                                                                 
@@ -76,9 +75,9 @@
 
                                                     <div class="col-sm-6" >
                                                                         
-                                                                                    <md-card class="dash-mdcard">
+                                                                                    <md-card class="dash-mdcard" [routerLink]="['/drivers_online']">
                                                                                     
-                                                                                    <md-card-title >Destiny's Users</md-card-title>   
+                                                                                    <md-card-title >Destiny's Online Drivers</md-card-title>   
                                                                                     
                                                                                     <md-card-content >
                                                                                 
@@ -95,19 +94,20 @@
 
 
 
-     <div class="col-sm-12" >
-        <div class="map" style="width:100%;">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d99362.50140340185!2d-77.08460605962898!3d38.89932772907388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1479727005458" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-
-     </div>
+                                                   <div class="col-sm-12" > <md-card class="map-mdcard">
+                                                            <div class="map" style="width:100%;">
+                                                                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d99362.50140340185!2d-77.08460605962898!3d38.89932772907388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1479727005458" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                                           </div>
+                                                             </md-card>
+                                                  </div>
                             <div class="col-sm-6">
                                 
-                                       
-                                         	<div id="chartContainer" style="height: 400px; width: 100%;">
-                                        	</div>
-                                          
-                                                 
+                                   
+      
+   
+
+                                        
+
                              
                               </div>
 
@@ -116,5 +116,9 @@
 
 
 </div>
+
+
+ 
+
 
 
